# bgprecorder

./: .gitignore  Dockerfile  README.md  docker-compose.sample.yml  env.sample  pyproject.toml
.github/workflows/: release.yml
bgprecorder/: Dockerfile  bgprecorder.py  cli.py  client.py  env.sample  main.py  pyproject.toml  util.py
bgprecorder/bgprecorder/: __init__.py  cli.py  main.py  util.py
misc/: env.sh  psql.sh
