[tool.poetry]
name = "bgprecorder"
version = "0.0.0"
description = "BGP rib timeseries recording tool"
authors = ["yas-nyan <yas-nyan@sfc.wide.ad.jp>"]
homepage = "https://github.com/wide-vsix/bgprecorder"
repository = "https://github.com/wide-vsix/bgprecorder"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.7.0"
psycopg2-binary = "^2.9.3"
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bgpquery = "bgprecorder.cli:query"
bgprecorder = "bgprecorder.cli:recorder"

[tool.poetry-version-plugin]
source = "git-tag"